remove: 不要な権限削除

--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,7 @@
   "version": "1.0",
   "description": "Make Youtube Music Lofi",
   "permissions": [
-    "activeTab",
-    "storage",
-    "contextMenus"
+    "activeTab"
   ],
   "icons": {
     "16": "images/icon.png",
